samples/_failures_safe/1761081601_559923_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_365e9e89.c:182:1: error: expected identifier or ‘(’ at end of input
  182 | int
      | ^~~
